--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "7.43",
     "react-icons": "^5.1.0",
+    "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.8",
     "zod": "^3.20.6"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
+    "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
