--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "react-hook-form": "7.43",
     "react-icons": "^5.1.0",
     "react-router-bootstrap": "^0.26.2",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.23.0",
     "styled-components": "^6.1.8",
     "zod": "^3.20.6"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.29",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.22",
     "@types/react-router-bootstrap": "^0.26.6",
