--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "thrifty",
+  "homepage": "/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "GENERATE_SOURCEMAP": false,
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -12,7 +14,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
     "@types/styled-components": "^5.1.34",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.3",
     "immer": "^9.0.19",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
