--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.2.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.23.0",
+    "rollup": "^2.79.1",
     "zod": "^3.20.6"
   },
   "devDependencies": {
