--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thrifty",
-  "homepage": "/",
+  "homepage": "/~24SP_jacksonja13",
   "private": true,
   "version": "0.0.0",
   "type": "module",
